Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-9321

Quick fix "Assign to Local Variable" has no effect if signature does not match

    XMLWordPrintable

Details

    • 276e2bccaa0878d4836c3770e83aeece9b97b88c

    Description

      int someFunc(int);
      
      void f()
      {
          someFunc(); // Quick fix "Assign to Local Variable" can be triggered, but has no effect
      }
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kosjar Nikolai Kosjar
            kosjar Nikolai Kosjar
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes